# nexus-fx

./: .dockerignore  .env.example  .gitignore  README.md  alerts.yml  docker-compose.yml  loki.yaml  prometheus.yml  tempo.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml
cli/: README.md  pyproject.toml
cli/src/br_mentor/: __init__.py  auth.py  client.py  context.py  main.py  session.py
db/: init.sql
grafana/provisioning/dashboards/: dashboards.yml  nexus-fx-overview.json  nexus-fx-slo.json
grafana/provisioning/datasources/: loki.yml  prometheus.yml  tempo.yml
services/api-gateway/: .dockerignore  Dockerfile  requirements.txt
services/api-gateway/app/: config.py  logging_config.py  main.py  models.py
services/api-gateway/app/auth/: dependencies.py  jwt_handler.py
services/api-gateway/app/middleware/: request_logging.py
services/api-gateway/app/routes/: account.py  auth.py  ops.py  orders.py  prices.py  trades.py  ws.py
services/api-gateway/static/: app.js  index.html  styles.css
services/api-gateway/tests/: test_jwt.py
services/engine/: Dockerfile  requirements.txt
services/engine/app/: _ops.py  config.py  main.py
services/engine/app/matching/: engine.py  order_book.py
services/engine/app/middleware/: telemetry.py
services/engine/app/models/: database.py
services/engine/app/routes/: health.py  orders.py  (+1 more)
services/engine/tests/: test_order_book.py
services/price-service/: Dockerfile  requirements.txt
services/price-service/app/: config.py  main.py
services/price-service/tests/: test_mock_provider.py  test_price_quote.py
(+7 files in other folders)
