[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "br-mentor-cli"
version = "0.2.0"
description = "CLI for the AI-mentored SRE learning platform"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "httpx>=0.27.0",
    "rich>=13.7.0",
]

[project.scripts]
br-mentor = "br_mentor.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/br_mentor"]
